# YTDLP-PY-GUI

./: README.md  launch.ps1
backend/: .gitignore  main.py  pyproject.toml
backend/src/: DownloadStarter.py  SioEmitter.py  Ytdlp.py  db.py  logger.py  req.py  schemas.py  sockets.py  video_route.py
backend/tests/: test_logging.py  test_req_setup.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  schema.ts  socket.ts
frontend/src/context/: SSEStore.ts  videoStore.ts
frontend/src/pages/: Home.tsx
frontend/src/pages/components/: DownloadForm.tsx  Header.tsx  HistoryTable.tsx  ProgressBarOrID.tsx  ProgressBarOrThumbnail.tsx  SocketHandler.tsx  TableRowOptionMenu.tsx  ThemeSwitcher.tsx  VideoDialog.tsx  VideoDialog2.tsx
