[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "aiohttp-cors>=0.8.1",
    "aiosqlite>=0.21.0",
    "ffmpeg-python>=0.2.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "python-socketio>=5.13.0",
    "sqlmodel>=0.0.24",
    "watchfiles>=1.1.0",
    "yt-dlp>=2025.7.21",
] 
